Update gitignore and fix cols in two more list views

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 /nbproject/private/
 .phplint-cache
 *.swp
-*.rej
-*.orig
 
 # macOS-specific things to exclude
 
@@ -39,3 +37,20 @@ Temporary Items
 
 # Configuration for the Nova editor
 .nova
+
+# VS Code files for those working on multiple tools
+.vscode/*
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+# Visual Studio code coverage results
+*.coverage
+*.coveragexml
+
+# Visual Studio IDE cache/options directory
+.vs/
